fix: proper handling of no occupancy information in AnalysisListener