@@ -251,9 +251,13 @@ class AnalysisListener implements IterationEndsListener {
 				for (int i = 0; i < occupancyInformation.size(); i++) {
 					OccupancyInformation row = occupancyInformation.get(i);
 
+					if(row.occupiedCountByItems.isEmpty()) {
+						continue;
+					}
+
 					List<String> processedRow = new ArrayList<>(Arrays.asList( //
 							String.valueOf(row.simulationTime), //
-							String.valueOf(row.occupiedCountByItems.get(0))));
+							String.valueOf(row.occupiedCountByItems.getFirst())));
 
 					for (int k = 0; k < maximumPersons; k++) {
 						if (k < row.occupiedCountByItems.size()) {
@@ -323,9 +327,13 @@ class AnalysisListener implements IterationEndsListener {
 				for (int i = 0; i < occupancyInformation.size(); i++) {
 					OccupancyInformation row = occupancyInformation.get(i);
 
+					if(row.occupiedCountByRequests.isEmpty()) {
+						continue;
+					}
+
 					List<String> processedRow = new ArrayList<>(Arrays.asList( //
 							String.valueOf(row.simulationTime), //
-							String.valueOf(row.occupiedCountByRequests.get(0))));
+							String.valueOf(row.occupiedCountByRequests.getFirst())));
 
 					for (int k = 0; k < maximumRequests; k++) {
 						if (k < row.occupiedCountByRequests.size()) {
